--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ addons:
     sources: debian-sid
     packages: file
 script:
+   - sudo apt-get install -y dpkg  # to upgrade to dpkg >= 1.17.5ubuntu5.8, which fixes https://bugs.launchpad.net/ubuntu/+source/dpkg/+bug/1730627
   - file --version || true
   - find . -not \( -path ./.git -prune \) -type f -exec file -N {} + > file.list
   - sed 's/^\.\/\(.*\):/\1:/;s/^.*\/\(.*\):/\1:/;/^[^:]*\..*:/{s/^.*\(\.[^. ]*\):/\1:/;}' file.list | sort | uniq -c | sort -nr
